Import sources of jflex v1.6.1
Made manually:

    git co jflex_1_6
    mvn source:aggregate
    cp target/jflex-parent-1.6.1-sources.jar /tmp
    git co aggregated-java-sources
    git rm -r META-INF UnicodeProperties.java.skeleton de java_cup jflex
    jar -xf /tmp/jflex-parent-1.6.1-sources.jar
    git add --all
    git commit -a

--- a/jflex/Messages.properties
+++ b/jflex/Messages.properties
@@ -1,7 +1,7 @@
 UNTERMINATED_STR = Unterminated string at end of line.
 EOF_WO_ACTION    = <<EOF>> must be followed by an action.
 EOF_SINGLERULE   = <<EOF>> can only be used as a single rule.
-UNKNOWN_OPTION   = Unkown %-option
+UNKNOWN_OPTION   = Unknown %-option
 UNEXPECTED_CHAR  = Unexpected character
 UNEXPECTED_NL    = Unexpected character <newline>
 LEXSTATE_UNDECL  = Lexical state has not been declared.
@@ -68,7 +68,8 @@ MACRO_DEF_MISSING=Found no definition for macro "{0}" while expanding "{1}"
 PARSING_TOOK=Parsing took {0}
 NFA_TOOK=NFA construction took {0}
 LOOKAHEAD_NEEDS_ACTION="|" action cannot be used with lookahead expressions
-EMPTY_MATCH = Lookahead expression must have match with at least length 1.
+EMPTY_MATCH = Expression matches the empty string, which may lead to non-termination.
+EMPTY_MATCH_LOOK = Lookahead expression must have match with length of at least 1.
 CTOR_ARG = Expected an identifier for constructor argument name.
 CTOR_DEBUG = Emitting default constructor without parameters and init code for debug/standalone.
 INT_AND_TYPE = Scanner can't have int and reference return type at the same time.
@@ -77,8 +78,7 @@ UNSUPPORTED_UNICODE_VERSION_SUPPORTED_ARE=Unsupported Unicode version - supporte
 INVALID_UNICODE_PROPERTY=Invalid Unicode property
 DOT_BAR_NEWLINE_DOES_NOT_MATCH_ALL_CHARS=".|\\n" does not match all characters, because "." excludes all Unicode newline chars - use "[^]" instead
 PROPS_ARG_REQUIRES_UNICODE_VERSION=The --uniprops option requires a Unicode version argument - supported versions: {0}
-!! TODO: Fix this message in JFlex 1.6 to note that the InputStream ctor will go away entirely in the next version.
-EMITTING_INPUTSTREAM_CTOR=Emitting deprecated InputStream constructor. In JFlex 1.6, the default will be to NOT emit this constructor. The inputstreamctor option will cause this constructor to be emitted in JFlex 1.5 and 1.6; the version after 1.6 will never emit this constructor.
-SWITCH_METHOD_DEPRECATED=The 'switch' code generation method is deprecated and will be removed in JFlex 1.6.
-TABLE_METHOD_DEPRECATED=The 'table' code generation method is deprecated and will be removed in JFlex 1.6.
+!! TODO: The InputStream ctor will go away entirely in the next version after JFlex 1.6.
+EMITTING_INPUTSTREAM_CTOR=Emitting deprecated InputStream constructor. The inputstreamctor option will cause this constructor to be emitted in JFlex 1.6; the version after 1.6 will never emit this constructor.
 IMPOSSIBLE_CHARCLASS_RANGE = Impossible character class range (end is less than start)
+CODEPOINT_OUT_OF_RANGE = Hexadecimal code point is greater than the maximum allowed code point
