Remove deprecated LaTeX package a4wide
The a4wide pacakge has been deprecated since ???. They were already "sin obsolete" in 2007.
http://ctan.math.utah.edu/ctan/tex-archive/info/l2tabu/english/l2tabuen.pdf

Consider using \geometry instead.
https://latex.org/forum/viewtopic.php?t=18598

--- a/docs/pt_BR/manual-pt_BR.tex
+++ b/docs/pt_BR/manual-pt_BR.tex
@@ -1,7 +1,7 @@
 % $Id: manual.tex 587 2010-03-07 09:00:14Z lsf37 $
 
 \documentclass[11pt]{scrartcl}
-\usepackage{a4wide,verbatim,graphicx}
+\usepackage{verbatim,graphicx}
 \usepackage{pdfsetup}
 \usepackage{html}
 \usepackage{microtype}
