--- a/docs/xmanual.tex
+++ b/docs/xmanual.tex
@@ -1,5 +1,5 @@
 \documentclass[11pt]{scrartcl}
-\usepackage{a4wide,verbatim,graphicx,upquote,microtype}
+\usepackage{verbatim,graphicx,upquote,microtype}
 
 \usepackage{color}
 \definecolor{lcol}{rgb}{0,0,0.5}
