Remove image inclusion, because I can't resolve the path in the runtime dir.

--- a/docs/manual_start.tex
+++ b/docs/manual_start.tex
@@ -42,6 +42,7 @@
 
 \begin{document}
 
+% TODO Find real bath of image
 % can't find file fix.jflex-black.png
 %\centerline{\includegraphics[width=0.6\textwidth]{fig/jflex-black.png}}
 
