Comment out scrartcl
The Bazel rule doesn't know about https://ctan.org/pkg/scrartcl

--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -1,6 +1,6 @@
 % The Latex template for the manual, when doc built with bazel
 
-\documentclass[11pt]{scrartcl}
+\documentclass[11pt] %{scrartcl}
 \usepackage{a4wide,verbatim,graphicx,upquote,microtype}
 
 \usepackage{color}
