Stop with error when cli is invoked with no error input file.

--- a/jflex/src/main/resources/jflex/Messages.properties
+++ b/jflex/src/main/resources/jflex/Messages.properties
@@ -79,3 +79,4 @@ IMPOSSIBLE_CHARCLASS_RANGE = Impossible character class range (end is less than 
 CODEPOINT_OUT_OF_RANGE = Hexadecimal code point is greater than the maximum allowed code point
 NO_ENCODING = "--encoding needs an encoding name as parameter"
 CHARSET_NOT_SUPPORTED = "Encoding {0} not supported on this JVM."
+MISSING_INPUT_FILE = "No input file"
