--- a/docs/manual_full.tex
+++ b/docs/manual_full.tex
@@ -8,3 +8,12 @@
 \newcommand{\textquotesingle}{'}
 
 \begin{document}
+
+\input{content}
+
+\newpage
+
+\bibliographystyle{plain}
+\bibliography{manual}
+
+\end{document}
