--- a/docs/manual_start.tex
+++ b/docs/manual_start.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 \usepackage{graphicx}
 \usepackage{hyperref}
+\usepackage{microtype}
 
 % pandoc now uses \tightlist
 \providecommand{\tightlist}{%
