do not use a4wide

--- a/docs/manual_start.tex
+++ b/docs/manual_start.tex
@@ -1,4 +1,6 @@
 \documentclass{article}
+
+% \usepackage{a4wide} % deprecated. Replace by geometry.
 \usepackage{graphicx}
 \usepackage{hyperref}
 \usepackage{microtype}
