--- a/docs/manual_start.tex
+++ b/docs/manual_start.tex
@@ -4,6 +4,8 @@
 \usepackage{graphicx}
 \usepackage{hyperref}
 \usepackage{microtype}
+% upquote depends on https://github.com/ProdriveTechnologies/bazel-latex/pull/4
+% \usepackage{upquote}
 
 % pandoc now uses \tightlist
 \providecommand{\tightlist}{%
