Use package color

--- a/docs/manual_start.tex
+++ b/docs/manual_start.tex
@@ -6,6 +6,8 @@
 \usepackage{microtype}
 % upquote depends on https://github.com/ProdriveTechnologies/bazel-latex/pull/4
 % \usepackage{upquote}
+\usepackage{color}
+\definecolor{lcol}{rgb}{0,0,0.5}
 
 % pandoc now uses \tightlist
 \providecommand{\tightlist}{%
