--- a/docs/manual_start.tex
+++ b/docs/manual_start.tex
@@ -1,13 +1,23 @@
 \documentclass{article}
 
+\usepackage[utf8]{inputenc}
+
 % \usepackage{a4wide} % deprecated. Replace by geometry.
 \usepackage{graphicx}
-\usepackage{hyperref}
 \usepackage{microtype}
 % upquote depends on https://github.com/ProdriveTechnologies/bazel-latex/pull/4
 % \usepackage{upquote}
 \usepackage{color}
 \definecolor{lcol}{rgb}{0,0,0.5}
+\usepackage[
+%  unicode=true,
+   bookmarks,
+   pdftitle={JFlex User's Manual},
+   pdfauthor={Gerwin Klein, Steve Rowe, Regis Decamps},
+   pdfkeywords={Java, scanner, lexer, scanner generator, cup, regexp, regex, dfa, nfa, lalr},
+   colorlinks=true, linkcolor=lcol, citecolor=lcol, filecolor=lcol, urlcolor=lcol,
+   plainpages=false,
+  ]{hyperref}
 
 % pandoc now uses \tightlist
 \providecommand{\tightlist}{%
