--- a/docs/manual_start.tex
+++ b/docs/manual_start.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 
 \usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
 
 % \usepackage{a4wide} % deprecated. Replace by geometry.
 \usepackage{graphicx}
