Set lengths parindent and parskip

--- a/docs/manual_start.tex
+++ b/docs/manual_start.tex
@@ -29,4 +29,7 @@
 \let\orighyperref\hyperref
 \renewcommand{\hyperref}[2][]{\orighyperref[#1]{#2} (\autoref{#1})}
 
+\setlength{\parindent}{0pt}
+\setlength{\parskip}{1ex plus 0.5ex minus 0.2ex}
+
 \begin{document}
