--- a/docs/manual_start.tex
+++ b/docs/manual_start.tex
@@ -33,3 +33,5 @@
 \setlength{\parskip}{1ex plus 0.5ex minus 0.2ex}
 
 \begin{document}
+
+\centerline{\includegraphics[width=0.6\textwidth]{docs/fig/jflex-black}}
