Rollforward "Use \input"
This reverts commit c796da5ff731b279d2c796ddaaab28869da696b6.

Use full bazel path for include

--- a/docs/manual_full.tex
+++ b/docs/manual_full.tex
@@ -35,3 +35,7 @@
 \begin{document}
 
 \centerline{\includegraphics[width=0.6\textwidth]{docs/fig/jflex-black}}
+
+\input{docs/content}
+
+\end{document}
