Generate _contex.tex (including all sections) automatically

--- a/docs/manual_full.tex
+++ b/docs/manual_full.tex
@@ -36,15 +36,6 @@
 
 \centerline{\includegraphics[width=0.6\textwidth]{docs/fig/jflex-black}}
 
-\input{docs/intro}
-\input{docs/installing}
-\input{docs/maven-plugin}
-\input{docs/ant-task}
-\input{docs/example}
-\input{docs/lex-specs}
-\input{docs/encodings}
-\input{docs/performance}
-\input{docs/porting-and-parsers}
-\input{docs/end}
+\input{docs/_content}
 
 \end{document}
