Extract first page in its own tex file

--- a/docs/manual_full.tex
+++ b/docs/manual_full.tex
@@ -34,16 +34,7 @@
 
 \begin{document}
 
-\centerline{\includegraphics[width=0.6\textwidth]{docs/fig/jflex-black}}
-
-\begin{center}
-\sffamily
-{\Large The Fast Lexical Analyser Generator}\\
-\smallskip\smallskip
-Copyright \copyright\ 1998--2018 by \href{http://www.doclsf.de}{Gerwin Klein},
-Steve Rowe, and \href{http://regis.decamps.info/}{Régis Décamps}.
-\end{center}
-
+\input{docs/manual_first_page}
 \input{docs/_content}
 
 \end{document}
