--- a/docs/manual_first_page.tex
+++ b/docs/manual_first_page.tex
@@ -1,9 +1,14 @@
-\centerline{\includegraphics[width=0.6\textwidth]{docs/fig/jflex-black}}
-
 \begin{center}
+\includegraphics[width=0.6\textwidth]{docs/fig/jflex-black}
+
 \sffamily
 {\Large The Fast Lexical Analyser Generator}\\
 \smallskip\smallskip
 Copyright \copyright\ 1998--2018 by \href{http://www.doclsf.de}{Gerwin Klein},
 Steve Rowe, and \href{http://regis.decamps.info/}{Régis Décamps}.
+
+\vspace*{15ex}
+{\Huge \sffamily \bfseries JFlex User's Manual}\\
+\bigskip
+Version 1.7.1-SNAPSHOT, {\today}
 \end{center}
