Replace version automatically

--- a/docs/manual_first_page.tex
+++ b/docs/manual_first_page.tex
@@ -10,5 +10,5 @@ Steve Rowe, and \href{http://regis.decamps.info/}{Régis Décamps}.
 \vspace*{15ex}
 {\Huge \sffamily \bfseries JFlex User's Manual}\\
 \bigskip
-Version 1.7.1-SNAPSHOT, {\today}
+Version $VERSION, {\today}
 \end{center}
