Add self citation
- use option --bibtex in pandoc
- define autocite and textcite

--- a/docs/manual_full.tex
+++ b/docs/manual_full.tex
@@ -25,6 +25,9 @@
 
 \newcommand{\textquotesingle}{'}
 
+\newcommand{\autocite}[1]{\cite{#1}}
+\newcommand{\textcite}[1]{\cite{#1}}
+
 \let\orighyperref\hyperref
 \renewcommand{\hyperref}[2][]{\orighyperref[#1]{#2} (\autoref{#1})}
 
