PDF use \title from doc
Add opton  pdfusetitle to hyperref package

--- a/docs/manual_first_page.tex
+++ b/docs/manual_first_page.tex
@@ -1,6 +1,8 @@
 \begin{center}
 \includegraphics[width=0.6\textwidth]{docs/fig/jflex-black}
 
+%\maketitle
+
 \sffamily
 {\Large The Fast Lexical Analyser Generator}\\
 \smallskip\smallskip
