--- a/docs/manual_full.tex
+++ b/docs/manual_full.tex
@@ -13,8 +13,7 @@
 \usepackage[
 %  unicode=true,
    bookmarks,
-   pdftitle={JFlex User's Manual},
-   pdfauthor={Gerwin Klein, Steve Rowe, Regis Decamps},
+   pdfusetitle,
    pdfkeywords={Java, scanner, lexer, scanner generator, cup, regexp, regex, dfa, nfa, lalr},
    colorlinks=true, linkcolor=lcol, citecolor=lcol, filecolor=lcol, urlcolor=lcol,
    plainpages=false,
@@ -24,6 +23,9 @@
    includeheadfoot,
    margin=2.54cm
 }
+
+\title{JFlex User's Manual}
+\author{Gerwin Klein, Steve Rowe, Régis Décamps}
 
 % pandoc now uses \tightlist
 \providecommand{\tightlist}{%
