--- a/docs/manual_full.tex
+++ b/docs/manual_full.tex
@@ -13,12 +13,17 @@
 \usepackage[
 %  unicode=true,
    bookmarks,
+   colorlinks,
    pdfusetitle,
-   pdfkeywords={Java, scanner, lexer, scanner generator, cup, regexp, regex, dfa, nfa, lalr},
-   colorlinks=true, linkcolor=lcol, citecolor=lcol, filecolor=lcol, urlcolor=lcol,
    plainpages=false,
   ]{hyperref}
-
+\hypersetup{
+  colorlinks=true, linkcolor=lcol, citecolor=lcol, filecolor=lcol, urlcolor=lcol,
+  pdfinfo={
+    CreationDate={D:200911082313},
+    ModDate=\today,
+  }
+}
 \geometry{
    includeheadfoot,
    margin=2.54cm
