--- a/docs/manual_full.tex
+++ b/docs/manual_full.tex
@@ -1,30 +1,45 @@
 \documentclass{article}
 
-\usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 
 % \usepackage{a4wide} % deprecated. Replace by geometry.
+\usepackage{geometry}
 \usepackage{graphicx}
 \usepackage{microtype}
 % upquote depends on https://github.com/ProdriveTechnologies/bazel-latex/pull/4
 % \usepackage{upquote}
 \usepackage{color}
-\definecolor{lcol}{rgb}{0,0,0.5}
+\definecolor{lcol}{rgb}{0.2470,0.3176,0.7098}
 \usepackage[
 %  unicode=true,
    bookmarks,
-   pdftitle={JFlex User's Manual},
-   pdfauthor={Gerwin Klein, Steve Rowe, Regis Decamps},
-   pdfkeywords={Java, scanner, lexer, scanner generator, cup, regexp, regex, dfa, nfa, lalr},
-   colorlinks=true, linkcolor=lcol, citecolor=lcol, filecolor=lcol, urlcolor=lcol,
+   colorlinks,
+   pdfusetitle,
    plainpages=false,
   ]{hyperref}
+\hypersetup{
+  colorlinks=true, linkcolor=lcol, citecolor=lcol, filecolor=lcol, urlcolor=lcol,
+  pdfinfo={
+    CreationDate={D:200911082313},
+    ModDate=\today,
+  }
+}
+\geometry{
+   includeheadfoot,
+   margin=2.54cm
+}
+
+\title{JFlex User's Manual}
+\author{Gerwin Klein, Steve Rowe, Régis Décamps}
 
 % pandoc now uses \tightlist
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
 
 \newcommand{\textquotesingle}{'}
+
+\newcommand{\autocite}[1]{\cite{#1}}
+\newcommand{\textcite}[1]{\cite{#1}}
 
 \let\orighyperref\hyperref
 \renewcommand{\hyperref}[2][]{\orighyperref[#1]{#2} (\autoref{#1})}
@@ -34,8 +49,12 @@
 
 \begin{document}
 
-\centerline{\includegraphics[width=0.6\textwidth]{docs/fig/jflex-black}}
+\input{docs/_first_page}
 
+\newpage
+\tableofcontents
+
+\newpage
 \input{docs/_content}
 
 \end{document}
