fix byaccj typos in manual

--- a/docs/pt_BR/manual-pt_BR.tex
+++ b/docs/pt_BR/manual-pt_BR.tex
@@ -1037,9 +1037,9 @@ if you are interested in how to interface your generated
 scanner with Byacc/J.
 \begin{itemize}
 \item
-{\bf \texttt{\%byacc}}
+{\bf \texttt{\%byaccj}}
 
-The \texttt{\%byacc} directive enables the BYacc/J compatibility mode and is equivalent
+The \texttt{\%byaccj} directive enables the BYacc/J compatibility mode and is equivalent
 to the following set of directives:
 
 \begin{verbatim}
