--- a/docs/manual_full.tex
+++ b/docs/manual_full.tex
@@ -6,8 +6,7 @@
 \usepackage{geometry}
 \usepackage{graphicx}
 \usepackage{microtype}
-% upquote depends on https://github.com/ProdriveTechnologies/bazel-latex/pull/4
-% \usepackage{upquote}
+\usepackage{upquote}
 \usepackage{color}
 \definecolor{lcol}{rgb}{0.2470,0.3176,0.7098}
 \usepackage[
@@ -35,8 +34,6 @@
 % pandoc now uses \tightlist
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
-
-\newcommand{\textquotesingle}{'}
 
 \newcommand{\autocite}[1]{\cite{#1}}
 \newcommand{\textcite}[1]{\cite{#1}}
