manual: provide \tightlist command
newer pandoc versions generate \tightlist, which they provide in their own
prelude, which we don't include here.

--- a/docs/xmanual.tex
+++ b/docs/xmanual.tex
@@ -34,6 +34,9 @@
 \renewcommand{\subsubsectionautorefname}{Section}
 \renewcommand{\Hfootnoteautorefname}{Footnote}
 
+\providecommand{\tightlist}{%
+  \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
+
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{1ex plus 0.5ex minus 0.2ex}
 
@@ -70,7 +73,7 @@ Version 1.8.0-SNAPSHOT, {\today}
 \input{porting-and-parsers}
 \input{end}
 
-\newpage  
+\newpage
 
 \bibliographystyle{plain}
 \bibliography{manual}
