--- a/docs/xmanual.tex
+++ b/docs/xmanual.tex
@@ -55,7 +55,7 @@ Steve Rowe, and \href{http://regis.decamps.info/}{R\'egis D\'ecamps}.
 \vspace*{15ex}
 {\Huge \sffamily \bfseries JFlex User's Manual}\\
 \bigskip
-Version 1.8.2-SNAPSHOT, {\today}
+Version 1.8.2, {\today}
 \end{center}
 
 \newpage
