Add bibliography to the Bazel-generated manual (#802)
* Upgrade to babel_latex rule v1.0

* Build PDF with biblatex and bibliography

* End manual with bibliography

* Add the manual.pdf to the Cirrus artefacts.

--- a/docs/manual_full.tex
+++ b/docs/manual_full.tex
@@ -35,8 +35,8 @@
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
 
-\newcommand{\autocite}[1]{\cite{#1}}
-\newcommand{\textcite}[1]{\cite{#1}}
+\usepackage{biblatex}
+\addbibresource{docs/manual.bib}
 
 \let\orighyperref\hyperref
 \renewcommand{\hyperref}[2][]{\orighyperref[#1]{#2} (\autoref{#1})}
@@ -53,5 +53,8 @@
 
 \newpage
 \input{docs/_content}
+
+\pagebreak
+\printbibliography
 
 \end{document}
